<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1200</width>
    <height>800</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Data Augmentation Tool</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout_main">
    <item>
     <widget class="QLabel" name="label_title">
      <property name="font">
       <font>
        <pointsize>24</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
       <string>Data Augmentation Tool</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QGroupBox" name="groupBox_hyperparameters">
      <property name="title">
       <string>Hyperparameters</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_hyperparameters">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_displacement_range">
         <item>
          <widget class="QLabel" name="label_displacement_range">
           <property name="text">
            <string>Displacement Range (Min, Max):</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QDoubleSpinBox" name="spinBox_displacement_range_min">
           <property name="minimum">
            <double>0.0</double>
           </property>
           <property name="maximum">
            <double>1.0</double>
           </property>
           <property name="value">
            <double>0.2</double>
           </property>
           <property name="singleStep">
            <double>0.1</double>
           </property>
           <property name="decimals">
            <number>1</number>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QDoubleSpinBox" name="spinBox_displacement_range_max">
           <property name="minimum">
            <double>0.0</double>
           </property>
           <property name="maximum">
            <double>1.0</double>
           </property>
           <property name="value">
            <double>0.4</double>
           </property>
           <property name="singleStep">
            <double>0.1</double>
           </property>
           <property name="decimals">
            <number>1</number>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_rotation_range">
         <item>
          <widget class="QLabel" name="label_rotation_range">
           <property name="text">
            <string>Rotation Range (Min, Max):</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QDoubleSpinBox" name="spinBox_rotation_range_min">
           <property name="minimum">
            <double>0.0</double>
           </property>
           <property name="maximum">
            <double>2.0</double>
           </property>
           <property name="value">
            <double>0.4</double>
           </property>
           <property name="singleStep">
            <double>0.1</double>
           </property>
           <property name="decimals">
            <number>1</number>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QDoubleSpinBox" name="spinBox_rotation_range_max">
           <property name="minimum">
            <double>0.0</double>
           </property>
           <property name="maximum">
            <double>2.0</double>
           </property>
           <property name="value">
            <double>1.5</double>
           </property>
           <property name="singleStep">
            <double>0.1</double>
           </property>
           <property name="decimals">
            <number>1</number>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_augment_per_file">
         <item>
          <widget class="QLabel" name="label_augment_per_file">
           <property name="text">
            <string>Augment per File:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QSpinBox" name="spinBox_augment_per_file">
           <property name="minimum">
            <number>1</number>
           </property>
           <property name="maximum">
            <number>10</number>
           </property>
           <property name="value">
            <number>2</number>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_wires_to_remove">
         <item>
          <widget class="QLabel" name="label_wires_to_remove">
           <property name="text">
            <string>Wires to Remove:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QSpinBox" name="spinBox_wires_to_remove">
           <property name="minimum">
            <number>0</number>
           </property>
           <property name="maximum">
            <number>10</number>
           </property>
           <property name="value">
            <number>4</number>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_wires_to_keep">
         <item>
          <widget class="QLabel" name="label_wires_to_keep">
           <property name="text">
            <string>Wires to Keep:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QSpinBox" name="spinBox_wires_to_keep">
           <property name="minimum">
            <number>0</number>
           </property>
           <property name="maximum">
            <number>10</number>
           </property>
           <property name="value">
            <number>5</number>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
    </item>
    
    <!-- Directory Selection -->
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_dirs">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_ply_dir">
        <item>
         <widget class="QLabel" name="label_ply_dir">
          <property name="text">
           <string>PLY Directory:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="lineEdit_ply_dir"/>
        </item>
        <item>
         <widget class="QPushButton" name="button_browse_ply">
          <property name="text">
           <string>Browse</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_label_dir">
        <item>
         <widget class="QLabel" name="label_label_dir">
          <property name="text">
           <string>Label Directory:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="lineEdit_label_dir"/>
        </item>
        <item>
         <widget class="QPushButton" name="button_browse_label">
          <property name="text">
           <string>Browse</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </item>

    <item>
     <widget class="QTextEdit" name="textEdit_progress">
      <property name="placeholderText">
       <string>Progress log...</string>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_buttons">
      <item>
       <spacer name="horizontalSpacer_1">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>0</width>
          <height>0</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QPushButton" name="button_start">
        <property name="text">
         <string>Start</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="button_cancel">
        <property name="text">
         <string>Cancel</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>0</width>
          <height>0</height>
         </size>
        </property>
       </spacer>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QProgressBar" name="progressBar">
      <property name="minimum">
       <number>0</number>
      </property>
      <property name="maximum">
       <number>100</number>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1200</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
